Updated source to Core V2

--- a/application/view/header.html
+++ b/application/view/header.html
@@ -4,7 +4,7 @@
 		<title>[[title]]</title>
 		<base href="[[site_base]]" />
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="/version/1/css/style.css" />
 		[[header_extra]]
 	</head>
 	<body>
