v4 update - Major refactoring and full use of namespaces.

--- a/application/view/page.html
+++ b/application/view/page.html
@@ -15,6 +15,10 @@
             +content+
             <div class="clear"></div>
         </div>
-        <div class="copyright"><a href="http://nimja.com"><img src="assets/images/logo.png" />Copyright &copy; Nimja.com 2013</a></div>
+        <div class="copyright">
+            <p><a href="https://github.com/Nimja/UltraLight-Core">Source on Github: UltraLight - Core (the framework)</a></p>
+            <p><a href="https://github.com/Nimja/UltraLight-Example">Source on Github: UltraLight - Example (this site)</a></p>
+            <p><a href="http://nimja.com"><img src="assets/images/logo.png" />Copyright &copy; Nimja.com 2013</a></p>
+        </div>
     </body>
 </html>
