--- a/application/view/page/features.html
+++ b/application/view/page/features.html
@@ -1,6 +1,22 @@
 This little site is to display some of the basic code functionality of UltraLight.
 
 = Formatted text example
+= This project is on GitHub!
+* Core (the framework): "UltraLight-Core"=>https://github.com/Nimja/UltraLight-Core
+* Example (this site): "UltraLight-Example"=>https://github.com/Nimja/UltraLight-Example
+
+== UltraLight Core v 4
+* Another refactor; namespaces and more structured core library.
+* Support for transformations.
+
+== Example of Transformations
+* ucfirst: +transform:ucfirst+
+* upper: +transform:upper+
+* lower: +transform:lower+
+* random(changes every reload): +transform:random+
+* glitch(changes every reload): +transform:glitch+
+* custom: +transform:custom+
+
 == UltraLight Core v 3
 * Refactor of all the logic, very cool model system and new page system for AJAX requests.
 
