--- a/application/view/page/ajax.html
+++ b/application/view/page/ajax.html
@@ -1,5 +1,5 @@
 <p>This is a simple example of an ajax request.</p>
-<p id="testButton" class="button">Just press this text!</p>
+<p><a id="testButton" class="btn btn-large btn-success">Click this button!!</a><p>
 <div id="testResult" class="clear" style="margin: 20px; height: 80px;"></div>
 <script src="//code.jquery.com/jquery.min.js"></script>
 <script>
