--- a/application/view/page/features.html
+++ b/application/view/page/features.html
@@ -5,6 +5,9 @@ This little site is to display some of the basic code functionality of UltraLigh
 * Core (the framework): "UltraLight-Core"=>https://github.com/Nimja/UltraLight-Core
 * Example (this site): "UltraLight-Example"=>https://github.com/Nimja/UltraLight-Example
 
+== UltraLight Core v 4.1
+* Support for BootStrap!
+
 == UltraLight Core v 4
 * Another refactor; namespaces and more structured core library.
 * Support for transformations.
