Fixed silly mistake in logo-url.

--- a/application/view/page.html
+++ b/application/view/page.html
@@ -29,7 +29,7 @@
         <div class="navbar navbar-inverse copyright">
             <p><a href="https://github.com/Nimja/UltraLight-Core">Source on Github: UltraLight - Core (the framework)</a></p>
             <p><a href="https://github.com/Nimja/UltraLight-Example">Source on Github: UltraLight - Example (this site)</a></p>
-            <p><a href="http://nimja.com"><img src="assets/images/logo.png" alt="Ultralight Logo" /> Copyright &copy; Nimja.com 2014</a></p>
+            <p><a href="http://nimja.com"><img src="/assets/images/logo.png" alt="Ultralight Logo" /> Copyright &copy; Nimja.com 2014</a></p>
         </div>
     </body>
 </html>
