New transformers and textformatting features.

--- a/application/view/page/features.html
+++ b/application/view/page/features.html
@@ -2,8 +2,12 @@ This little site is to display some of the basic code functionality of UltraLigh
 
 = Formatted text example
 = This project is on GitHub!
-* Core (the framework): "UltraLight-Core"=>https://github.com/Nimja/UltraLight-Core
-* Example (this site): "UltraLight-Example"=>https://github.com/Nimja/UltraLight-Example
+* Core (the framework): [link|https://github.com/Nimja/UltraLight-Core|UltraLight-Core]
+* Example (this site): [link|https://github.com/Nimja/UltraLight-Example|UltraLight-Example]
+
+== UltraLight Core v 4.2
+* Better transforms!
+* Also renderers for links, [tooltip|tooltips|Because you never know when you need more information!] and more!
 
 == UltraLight Core v 4.1
 * Support for BootStrap!
@@ -18,6 +22,7 @@ This little site is to display some of the basic code functionality of UltraLigh
 * lower: +transform:lower+
 * random(changes every reload): +transform:random+
 * glitch(changes every reload): +transform:glitch+
+* number(changes every reload): +value+: +value:number:ucfirst+.
 * custom: +transform:custom+
 
 == UltraLight Core v 3
