Minor other improvements and new version of bootstrap.

--- a/application/view/page.html
+++ b/application/view/page.html
@@ -10,7 +10,7 @@
         <title>+title+</title>
         <script src="//code.jquery.com/jquery.min.js" type="application/javascript"></script>
         <link href="/version/+site.version+/css/theme.css" rel="stylesheet">
-        <script src="/version/+site.version+/js/bootstrap.min.js"></script>
+        <script src="/version/+site.version+/js/jquery.bootstrap.min.js"></script>
     </head>
     <body>
         +menu+
