--- a/application/view/page/html.html
+++ b/application/view/page/html.html
@@ -1,7 +1,7 @@
 <div style="border: 2px dashed red; padding: 2px;">
     <div style="border: 2px dashed orange; padding: 2px;">
-        <div style="color: red; border: 2px dashed yellow; padding: 2px; text-align: center;">
-            Example of raw HTML in a form, for whatever reason.
+        <div style="color: blue; border: 2px dashed yellow; padding: 2px; text-align: center;">
+            Example of raw HTML in a form for a good reason, probably.
         </div>
     </div>
 </div>
