Removed bootstrap and jquery from this repo.

--- a/application/view/page.html
+++ b/application/view/page.html
@@ -8,9 +8,8 @@
         <meta name="author" content="">
         <link rel="icon" href="../../favicon.ico">
         <title>+title+</title>
-        <script src="//code.jquery.com/jquery.min.js" type="application/javascript"></script>
-        <link href="/version/+site.version+/css/theme.css" rel="stylesheet">
-        <script src="/version/+site.version+/js/jquery.bootstrap.min.js"></script>
+        <link href="//assets.nimja.com/css/bootstrap.alt.css" rel="stylesheet">
+        <script src="//assets.nimja.com/js/jquery.bootstrap.min.js" type="application/javascript"></script>
     </head>
     <body>
         +menu+
@@ -29,7 +28,7 @@
         <div class="navbar navbar-inverse copyright">
             <p><a href="https://github.com/Nimja/UltraLight-Core">Source on Github: UltraLight - Core (the framework)</a></p>
             <p><a href="https://github.com/Nimja/UltraLight-Example">Source on Github: UltraLight - Example (this site)</a></p>
-            <p><a href="http://nimja.com"><img src="/assets/images/logo.png" alt="Ultralight Logo" /> Copyright &copy; Nimja.com 2014</a></p>
+            <p><a href="http://nimja.com"><img src="/assets/images/ultralight-logo-white.png" alt="Ultralight Logo" /> Copyright &copy; Nimja.com 2016</a></p>
         </div>
     </body>
 </html>
